identifiers-uuid/tests/ui/uuid_wrong_type.stderr
error[E0204]: the trait `Copy` cannot be implemented for this type
 --> tests/ui/uuid_wrong_type.rs:4:8
  |
4 | struct BadId(String);
  |        ^^^^^ ------ this field does not implement `Copy`

error[E0308]: mismatched types
 --> tests/ui/uuid_wrong_type.rs:3:10
  |
3 | #[derive(UuidIdentifier)]
  |          ^^^^^^^^^^^^^^
  |          |
  |          expected `String`, found `Uuid`
  |          arguments to this function are incorrect
  |
note: tuple struct defined here
 --> tests/ui/uuid_wrong_type.rs:4:8
  |
4 | struct BadId(String);
  |        ^^^^^
  = note: this error originates in the derive macro `UuidIdentifier` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/ui/uuid_wrong_type.rs:3:10
  |
3 | #[derive(UuidIdentifier)]
  |          ^^^^^^^^^^^^^^
  |          |
  |          expected `Uuid`, found `String`
  |          expected `Uuid` because of return type
  |
  = note: this error originates in the derive macro `UuidIdentifier` (in Nightly builds, run with -Z macro-backtrace for more info)
