identifiers-uuid/tests/ui/uuid_wrong_type.rs
use identifiers_uuid::UuidIdentifier;

#[derive(UuidIdentifier)]
struct BadId(String);

fn main() {}
